refactor: RedisTemplate 비동기 처리